--- a/app/src/main/res/layout/activity_slot_details.xml
+++ b/app/src/main/res/layout/activity_slot_details.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".view.RequestSlot.SlotDetailsActivity">
+    tools:context=".view.RequestSlot.SlotDetailsActivity"
+    android:background="@color/cool_black">
 
     <!-- Title: Slot Details -->
     <TextView
@@ -18,7 +19,8 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:fontFamily="@font/abril_fatface"
-        android:layout_marginBottom="24sp"/>
+        android:layout_marginBottom="22sp"
+        android:textColor="@color/colorPrimary"/>
 
     <!-- Address Section -->
     <LinearLayout
@@ -32,7 +34,8 @@
             android:layout_height="wrap_content"
             android:text="Address:"
             android:textSize="19sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:textColor="@color/blue"/>
 
         <!-- Address Box with Shadow -->
         <androidx.cardview.widget.CardView
@@ -42,7 +45,8 @@
             android:elevation="8sp"
             android:layout_marginStart="10sp"
             android:layout_marginBottom="16sp"
-            app:cardCornerRadius="8dp">
+            app:cardCornerRadius="8dp"
+            android:backgroundTint="@color/quantum_teal400">
 
             <TextView
                 android:id="@+id/slot_address_textview"
@@ -51,6 +55,7 @@
                 android:gravity="center"
                 android:fontFamily="@font/move_bold"
                 android:text="New market"
+                android:textColor="@color/quantum_grey900"
                 android:textSize="18sp"/>
 
         </androidx.cardview.widget.CardView>
@@ -68,6 +73,7 @@
             android:layout_height="wrap_content"
             android:text="Owner:    "
             android:textSize="19sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <!-- Address Box with Shadow -->
@@ -78,7 +84,8 @@
             android:elevation="8sp"
             android:layout_marginStart="7sp"
             android:layout_marginBottom="16sp"
-            app:cardCornerRadius="8dp">
+            app:cardCornerRadius="8dp"
+            android:backgroundTint="@color/quantum_teal400">
 
             <TextView
                 android:id="@+id/slot_owner_name_textview"
@@ -87,6 +94,7 @@
                 android:gravity="center"
                 android:fontFamily="@font/move_bold"
                 android:text="user 1"
+                android:textColor="@color/quantum_grey900"
                 android:textSize="18sp"/>
 
         </androidx.cardview.widget.CardView>
@@ -103,6 +111,7 @@
             android:layout_height="wrap_content"
             android:text="Distance:"
             android:textSize="19sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <!-- Address Box with Shadow -->
@@ -113,6 +122,7 @@
             android:elevation="8sp"
             android:layout_marginStart="7sp"
             android:layout_marginBottom="16sp"
+            android:backgroundTint="@color/quantum_teal400"
             app:cardCornerRadius="8dp">
 
             <TextView
@@ -122,6 +132,7 @@
                 android:gravity="center"
                 android:fontFamily="@font/move_bold"
                 android:text="2 km"
+                android:textColor="@color/quantum_grey900"
                 android:textSize="18sp"/>
 
         </androidx.cardview.widget.CardView>
@@ -139,6 +150,7 @@
             android:layout_height="wrap_content"
             android:text="Price:      "
             android:textSize="19sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <!-- Address Box with Shadow -->
@@ -149,6 +161,7 @@
             android:elevation="8sp"
             android:layout_marginStart="9sp"
             android:layout_marginBottom="16sp"
+            android:backgroundTint="@color/quantum_teal400"
             app:cardCornerRadius="8dp">
 
             <TextView
@@ -158,6 +171,7 @@
                 android:gravity="center"
                 android:fontFamily="@font/move_bold"
                 android:text="BDT 200"
+                android:textColor="@color/quantum_grey900"
                 android:textSize="18sp"/>
 
         </androidx.cardview.widget.CardView>
@@ -170,9 +184,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/security_measures"
-        android:textSize="19sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"/>
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="6sp"/>
 
     <!-- Security Measures Boxes -->
     <LinearLayout
@@ -201,6 +217,7 @@
                 android:fontFamily="@font/move_bold"
                 android:textAlignment="center"
                 android:padding="4dp"
+                android:textColor="@color/quantum_grey900"
                 />
         </androidx.cardview.widget.CardView>
 
@@ -223,6 +240,7 @@
                 android:textSize="16sp"
                 android:fontFamily="@font/move_bold"
                 android:textAlignment="center"
+                android:textColor="@color/quantum_grey900"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
 
@@ -244,6 +262,7 @@
                 android:textSize="15sp"
                 android:textAlignment="center"
                 android:fontFamily="@font/move_bold"
+                android:textColor="@color/quantum_grey900"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
@@ -255,7 +274,9 @@
         android:text="@string/dimensions"
         android:textSize="19sp"
         android:textStyle="bold"
-        android:layout_marginTop="12sp"/>
+        android:layout_marginTop="12sp"
+        android:textColor="#f4143c"
+        />
 
     <!-- Dimensions Boxes (Repeat as needed) -->
 
@@ -274,6 +295,7 @@
             android:layout_height="wrap_content"
             android:text="Length:"
             android:textSize="16sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <androidx.cardview.widget.CardView
@@ -282,7 +304,8 @@
             android:elevation="4dp"
             android:layout_marginStart="6sp"
             android:layout_marginEnd="12dp"
-            app:cardCornerRadius="4dp">
+            app:cardCornerRadius="4dp"
+            android:backgroundTint="@color/quantum_orange">
 
             <TextView
                 android:id="@+id/slot_length_textview"
@@ -290,6 +313,7 @@
                 android:layout_height="wrap_content"
                 android:text="200m"
                 android:textSize="16sp"
+                android:textColor="@color/quantum_grey900"
                 android:textAlignment="center"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
@@ -299,6 +323,7 @@
             android:layout_height="wrap_content"
             android:text="Width:"
             android:textSize="16sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <!-- Indoor Box (set to true) -->
@@ -308,7 +333,8 @@
             android:elevation="6dp"
             android:layout_marginStart="6sp"
             android:layout_marginEnd="12dp"
-            app:cardCornerRadius="4dp">
+            app:cardCornerRadius="4dp"
+            android:backgroundTint="@color/quantum_orange">
 
             <TextView
                 android:id="@+id/slot_width_textview"
@@ -316,6 +342,7 @@
                 android:layout_height="wrap_content"
                 android:text="200m"
                 android:textSize="16sp"
+                android:textColor="@color/quantum_grey900"
                 android:textAlignment="center"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
@@ -326,6 +353,7 @@
             android:layout_height="wrap_content"
             android:text="Height:"
             android:textSize="16sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
         <!-- CCTV Box (set to true) -->
         <androidx.cardview.widget.CardView
@@ -334,6 +362,7 @@
             android:elevation="6dp"
             android:layout_marginStart="6sp"
             app:cardCornerRadius="4dp"
+            android:backgroundTint="@color/quantum_orange"
             >
 
             <TextView
@@ -342,6 +371,7 @@
                 android:layout_height="wrap_content"
                 android:text="200m"
                 android:textSize="16sp"
+                android:textColor="@color/quantum_grey900"
                 android:textAlignment="center"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
@@ -360,6 +390,7 @@
             android:layout_height="wrap_content"
             android:text="Rating:    "
             android:textSize="19sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <androidx.cardview.widget.CardView
@@ -368,6 +399,7 @@
             android:elevation="6dp"
             android:layout_marginStart="6sp"
             android:layout_marginEnd="12dp"
+            android:backgroundTint="@color/quantum_orange"
             app:cardCornerRadius="4dp">
 
             <TextView
@@ -377,6 +409,7 @@
                 android:text="4.5"
                 android:textSize="16sp"
                 android:fontFamily="@font/move_bold"
+                android:textColor="@color/quantum_grey900"
                 android:textAlignment="center"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
@@ -393,6 +426,7 @@
             android:layout_height="wrap_content"
             android:text="Total Bookings: "
             android:textSize="19sp"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
 
         <androidx.cardview.widget.CardView
@@ -401,6 +435,7 @@
             android:elevation="6dp"
             android:layout_marginStart="6sp"
             android:layout_marginEnd="12dp"
+            android:backgroundTint="@color/quantum_orange"
             app:cardCornerRadius="4dp">
 
             <TextView
@@ -410,6 +445,7 @@
                 android:text="20"
                 android:textSize="16sp"
                 android:fontFamily="@font/move_bold"
+                android:textColor="@color/quantum_grey900"
                 android:textAlignment="center"
                 android:padding="4dp"/>
         </androidx.cardview.widget.CardView>
@@ -425,7 +461,7 @@
         android:paddingRight="16sp"
         android:layout_gravity="center"
         android:fontFamily="@font/move_bold"
-        android:backgroundTint="@color/teal_700"
+        android:backgroundTint="@color/blue"
         android:clickable="true"
         android:enabled="true"
         android:focusable="true"/>
