--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="16dp"
+    android:background="@color/cool_black"
     >
 
     <com.google.android.material.textfield.TextInputLayout
@@ -22,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#616161"
-            tools:ignore="VisualLintTextFieldSize" />
+            tools:ignore="VisualLintTextFieldSize"
+            android:textColor="@color/cool_black"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,7 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#616161"
-            tools:ignore="VisualLintTextFieldSize" />
+            tools:ignore="VisualLintTextFieldSize"
+            android:textColor="@color/cool_black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -46,6 +49,8 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:layout_margin="8dp"
+        android:textColor="@color/quantum_grey200"
+        android:background="@drawable/rounded_button_red"
         />
 
     <Button
@@ -53,7 +58,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/go_to_signup"
-        android:textColor="@color/black"
+        android:layout_marginTop="4sp"
+        android:padding="8sp"
+        android:textColor="@color/quantum_grey200"
+        android:background="@drawable/rounded_button_red"
         />
 
 
