--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -19,7 +19,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
+        android:background="@color/cool_black"
         android:orientation="vertical">
 
         <TextView
@@ -29,17 +29,17 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/welcome"
             android:fontFamily="@font/courgette"
-            android:textColor="@android:color/black"
+            android:textColor="@color/quantum_grey400"
             android:textSize="20sp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@color/cool_blue_2"/>
 
 
         <LinearLayout
@@ -103,14 +103,14 @@
                     android:layout_height="wrap_content"
                     android:text="Slots Near Me"
                     android:textStyle="bold"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@color/colorPrimary" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/saved_near_me_maps"
                     android:text="Address Here"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textColor="@color/blue" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -143,7 +143,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/choose_a_saved_place"
                 android:fontFamily="@font/courgette"
-                android:textColor="@color/black"
+                android:textColor="@color/quantum_grey400"
                 android:textSize="18sp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"/>
@@ -189,14 +189,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Work"
-                    android:textColor="@android:color/black" />
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/saved_work_address_maps"
                     android:text="Address Here"
-                    android:textColor="@android:color/darker_gray" />
+                    android:textColor="@color/blue" />
 
                 <TextView
                     android:layout_width="0dp"
