--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="16dp"
+    android:background="@color/cool_black"
     >
 
     <!--    a sign up form using material design having input for email, pass, confirm pass, phone and name, and a signup button-->
@@ -23,7 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#616161"
-            tools:ignore="VisualLintTextFieldSize" />
+            tools:ignore="VisualLintTextFieldSize"
+            android:textColor="@color/cool_black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -36,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="#616161"
-            tools:ignore="VisualLintTextFieldSize" />
+            tools:ignore="VisualLintTextFieldSize"
+            android:textColor="@color/cool_black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -51,6 +54,7 @@
             android:textColorHint="#616161"
             tools:ignore="VisualLintTextFieldSize"
             android:inputType="textPassword"
+            android:textColor="@color/cool_black"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,7 +69,8 @@
             android:layout_height="wrap_content"
             android:textColorHint="#616161"
             tools:ignore="VisualLintTextFieldSize"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:textColor="@color/cool_black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -79,7 +84,8 @@
             android:layout_height="wrap_content"
             android:textColorHint="#616161"
             tools:ignore="VisualLintTextFieldSize"
-            android:inputType="phone"/>
+            android:inputType="phone"
+            android:textColor="@color/cool_black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -88,6 +94,8 @@
         android:layout_height="wrap_content"
         android:text="@string/signup"
         android:layout_margin="8dp"
+        android:textColor="@color/quantum_grey200"
+        android:background="@drawable/rounded_button_red"
         />
 
     <Button
@@ -95,7 +103,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/go_to_login"
-        android:textColor="@color/black"
+        android:padding="12sp"
+        android:layout_marginTop="4sp"
+        android:textColor="@color/quantum_grey200"
+        android:background="@drawable/rounded_button_red"
         />
 
 </LinearLayout>
