--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -27,17 +27,17 @@
         android:layout_marginTop = "-10dp"
         android:alpha = "0.9"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_gravity = "center"
-        android:layout_marginBottom= "-30dp"
-        android:text="@string/description"
-        android:textSize="30sp"
-        android:textColor="#DDAC29"
-        android:fontFamily="@font/courgette"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:textAlignment="center"-->
+<!--        android:layout_gravity = "center"-->
+<!--        android:layout_marginBottom= "-30dp"-->
+<!--        android:text="@string/description"-->
+<!--        android:textSize="30sp"-->
+<!--        android:textColor="#DDAC29"-->
+<!--        android:fontFamily="@font/courgette"-->
+<!--        android:textAppearance="@style/TextAppearance.AppCompat.Large" />-->
 
 
 </FrameLayout>
