booking status error solved.

--- a/app/src/main/res/layout/activity_booking_slot.xml
+++ b/app/src/main/res/layout/activity_booking_slot.xml
@@ -284,22 +284,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel Booking"
+            android:text="Cancel"
+            android:layout_marginEnd="6dp"
             android:clickable="true"
             android:focusable="true"
             android:backgroundTint="@color/cool_red"
             android:textColor="@color/quantum_grey400"
-            android:layout_margin="6sp"
             android:textSize="14sp"
             android:enabled="true"/>
 
         <Button
+            android:layout_marginStart="6dp"
             android:id="@+id/booking_slot_pay_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Pay"
-            android:layout_margin="6sp"
             android:backgroundTint="@color/teal_700"
             android:textSize="15sp"
             android:textColor="@color/cool_black"
